# unitreeGo2_deployment

./: CMakeLists.txt  CMakeLists_example.txt  README.md  config.txt  install.sh  run_controller.cpp  run_controller.py  stand_go2.cpp
policies/LatentSpaceTorque_2_SEED_1/: policy.pt
policies/LatentSpaceTorque_4_SEED_1/: policy.pt
policies/LatentSpaceTorque_9_SEED_4/: policy.pt
policies/TORQUE_complex_reward_18_SEED_42/: policy.pt
policies/TORQUE_deploy_12_SEED_42/: policy.pt
policies/TORQUE_deploy_13_SEED_42/: policy.pt
policies/TORQUE_deploy_15_SEED_42/: policy.pt
policies/TORQUE_deploy_16_SEED_42/: policy.pt
policies/TORQUE_deploy_17_SEED_42/: policy.pt
policies/TORQUE_deploy_18_SEED_1/: policy.pt
policies/TORQUE_deploy_18_SEED_2/: policy.pt
policies/TORQUE_deploy_18_SEED_42/: policy.pt
policies/TORQUE_deploy_19_SEED_42/: policy.pt
policies/TORQUE_styleRew_20_SEED_42/: policy.pt
policies/TORQUE_styleRew_24_SEED_42/: policy.pt
policies/TORQUE_styleRew_25_SEED_42/: policy.pt
policies/flatAmpVision/2025-08-12_14-23-30_flat_DR5_improved_minimal_motion_files_SEED_3/: policy.pt
